@@ -54,7 +54,7 @@ function print_cells_temp ($cells) {
 		if (isset($row["color"]))
 			$color = 'style="color: ' . $row["color"] . ';"';
 
-		if (isset($row["href"]))
+		if (isset($row["href"]) and !empty($row["href"]))
 			echo '<td class="'.$class.'" style="text-align:right;"><a class="big_data" href="'.io_safe_input ($row["href"]).'" ' . $color . '>'.$row[1].'</a></td></tr>';
 		else
 			echo '<td class="'.$class.'" style="text-align:right;"><a class="big_data" ' . $color . '>'.$row[1].'</a></td></tr>';
@@ -124,6 +124,7 @@ $cells = array ();
 $cells[0][0] = __('Monitor checks');
 $cells[0][1] = $data["monitor_checks"];
 $cells[0]["href"] = "index.php?sec=estado&sec2=operation/agentes/status_monitor&refr=60&status=-1"; //All
+$cells[0]["color"] = "#000";
 
 $cells[3][0] = __('Monitors critical');
 $cells[3][1] = $data["monitor_critical"];
@@ -174,26 +175,27 @@ if($is_admin) {
 	$cells[0][0] = __('Local modules rate');
 	$cells[0][1] = format_numeric($server_performance ["local_modules_rate"]);
 	$cells[0]["color"] = "#729fcf";
-	$cells[0]["href"] = "javascript:";
+	$cells[0]["href"] = "";
 
 	$cells[1][0] = __('Remote modules rate');
 	$cells[1][1] = format_numeric($server_performance ["remote_modules_rate"]);
 	$cells[1]["color"] = "#729fcf";
-	$cells[1]["href"] = "javascript:";
+	$cells[1]["href"] = "";
 
 	$cells[2][0] = __('Local modules');
 	$cells[2][1] = format_numeric($server_performance ["total_local_modules"]);
 	$cells[2]["color"] = "#3465a4";
-	$cells[2]["href"] = "javascript:";
+	$cells[2]["href"] = "";
 
 	$cells[3][0] = __('Remote modules');
 	$cells[3][1] = format_numeric($server_performance ["total_remote_modules"]);
 	$cells[3]["color"] = "#3465a4";
-	$cells[3]["href"] = "javascript:";
+	$cells[3]["href"] = "";
 
 	$cells[4][0] = __('Total running modules');
 	$cells[4][1] = format_numeric($server_performance ["total_modules"]);
-	$cells[4]["href"] = "javascript:";
+	$cells[4]["color"] = "#000";
+	$cells[4]["href"] = "";
 
 	print_cells_temp ($cells);
 }
@@ -203,6 +205,7 @@ echo '<tr><th colspan="2">'.__('Summary').'</th></tr>';
 $cells = array ();
 $cells[0][0] = __('Total agents');
 $cells[0][1] = $data["total_agents"];
+$cells[0]["color"] = "#000";
 $cells[0]["href"] = "index.php?sec=estado&sec2=operation/agentes/estado_agente&refr=60";
 
 $cells[1][0] = __('Uninitialized modules');
@@ -213,7 +216,7 @@ $cells[1]["href"] = "index.php?sec=estado&sec2=operation/agentes/status_monitor&
 $cells[2][0] = __('Agents unknown');
 $cells[2][1] = $data["agents_unknown"];
 $cells[2]["color"] = "#aaa";
-$cells[2]["href"] = "javascript:";
+$cells[2]["href"] = "index.php?sec=estado&sec2=operation/agentes/estado_agente&refr=60&status=3";
 
 
 print_cells_temp ($cells);
